FIX: more spacing for header on new app router (#265)
* more spacing

* added search

* another test

* e

* trying margin bottom

* added search bar

--- a/custom-implementation/src/components/header.css
+++ b/custom-implementation/src/components/header.css
@@ -1,5 +1,6 @@
 .custom-header {
 	z-index: 60;
+	margin-bottom: 4rem;
 }
 
 .custom-header nav a {
